Closed Bug 203239 Opened 23 years ago Closed 23 years ago

Unable to scroll down with mousewheel over objects contained in IFRAMEs

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: wolruf, Assigned: bryner)

References

()

Details

(Keywords: regression, testcase)

Attachments

(3 files)

build ID: 2003042408 on Linux Saw it on Win2k too, build 20030423 Steps to reproduce: 1. Load URL http://www.aceshardware.com/read.jsp?id=55000253 , 2. Mouse over the middle ad (the Symantac ManHunt ad is the "ideal" one to repro this, not the XBox ad), 3. Scroll *down* page using the mouse wheel, 4. It doesn't scroll page, strangely, you can still scroll *up*. Doesn't happen with build 20030422. Regression between 20030422 and 20030423. Confirmed by controllers and nemo_work on #mz.
> Doesn't happen with build 20030422. Regression between 20030422 and 20030423. Which builds? Morning or evening? The 48-hour range you give has a lot of checkins in it....
Attached file Reduced testcase
several elements that tigger the issue: - there has to be a lot of content in the frame to be able, so that there would be a scrollbar if I didn't specify scrollbar="no", - there has to be scrollbar="no" - you have to have the CSS for the cursor (why ?). What to try, load testcase, try to scroll down with wheel mouse when mouse is over the iframe. I don't know if it's a bug or a normal behaviour, what seemed weird was the fact that it'll just work fine when you remove the CSS from the iframe. I'll try to see if this is a regression or if Mozilla has always had this behaviour.
Still happens on more Web sites nowadays (wheel mouse scrolls up, not down on numerous iframe ads, see testcase) using 2003050211 on Win2k. Any idea on the regression timeframe (I cannot test builds from where I am [dialup] for a week) ?
Keywords: testcase
I can confirm this too, on www.elgan.com, using Build ID 2003052908. I'll update with a nightly build tonight.
*** Bug 212785 has been marked as a duplicate of this bug. ***
I don't know why it would have worked before and then stopped, but, regardless, I question whether or not this is a bug. Personally, I would say that, previously, it was something that shouldn't have happened and now it's been fixed. When your mouse cursor is in the IFRAME, it's the IFRAME that should be getting the focus of the mouse wheel for scrolling events. The fact that "nothing happens" is correct because the main page doesn't have the focus, the IFRAME does. If you change the source code for reduced testcase to use scrolling="yes", then scrolling with the mouse wheel in the IFRAME correctly scrolls the IFRAME itself. When scrolling is set to "no" I would, personally, expect the current behaviour of nothing happening - because nothing there is nothing focused that should be happening... (The original reference URL seems to have changed, as I don't see any of the ads that are mentioned in the "steps to reproduce" text. Nor can I find an IFRAME on the www.elgan.com site.)
And just in case I misinterpreted this bug, I should mention that I have no problem at all scrolling up and down within the IFRAME itself (so long as scrolling is set to "yes"), nor do I have any problem scrolling the main page up and down when my mouse isn't over the IFRAME. This is with 7/21-04 under XP.
I can confirm this is still a bug to. I'm using Windows 2000 with SP4 loaded, Mozilla 1.4 (final) and Java 1.4.2 ... If you go to www.elgan.com and position your mouse pointer on the RIGHT-HAND side of the screen then you are not allowed to scroll down. However, if you position your mouse pointer on the LEFT-HAND side of the screen you ARE allowed to scroll down. Also, you ARE allowed to scroll UP no matter where your mouse pointer is positioned on the screen. Also, go to www.hardocp.com and position your mouse over some of the square/rectangular adverts. Some of them will allow you to scroll down and some will not. HOWEVER, you are ALWAYS allowed to scroll UP no matter where your mouse is positioned. Just as a side note...If you use Internet Explorer 6 (service pack 1 loaded) on the above two web sites, you can scroll PERFECTLY (up or down) no matter where the mouse is positioned.
Okay. I just tested this with 7/20 build of Firebird and got the same results that people are reporting. However, under the 7/23-04 build of Mozilla I'm seeing things even LESS like what's being reported than I had in my earlier comments when using 7/21-04. Now, www.elgan.com no longer displays properly at all. All I can see is the left-hand column, the rest of the screen is white. Additionally, I'm not seeing any ads at www.hardocp.com with the 7/23-04 build. (I can't recall if I saw them with the 7/21 build or not.) I can scroll up and down everywhere on both of those pages. For the purpose of diagnosing this bug, we should either define the scope (that it's 1.4 final specific only - so the "Version" field would need to be changed to "1.4 Branch") or the other reporters and commenters need to download the very latest Mozilla build and try again.
Ah! The recent IFRAME not being displayed problem is bug 213591 - which has just been fixed. I'll grab the 7/24-04 build then report back.
Okay, with 7/24-04 every is working as reported. However, I'll still stand by comment 7. I consider it to be a bug that any scrolling of the main page happen when hovering over an IFRAME. As far as I'm concerned, the focus should be on the IFRAME, and that's the *only* screen element thing that should be scrolled in that situation. The fact that you can scroll the page up on some IFRAME's is wrong - I don't think you should be able to do that either. (What I'm saying is that I consider the fact that scrolling down doesn't work not to be a regression but a partial fix of incorrect focus issues.) However, for consistency, either up and down should both work or they should both fail. Having just up working is wrong.
http://www.hardocp.com/ contains an ad that follows the problem described in this bug. The viewer cannot mouse scroll down over the ad but can scroll up over the add. The ad in question is an ad for abit motherboards (for now) it is in the Hard News section just after the first article and it is centered in the page. The scrolling over the ad just above it and below it works as expected you can scroll up and down over it. In the source one of the working iframes is between <!-- End Featured Articles --> and <!-- Content --> notes. The broken iframe is after the first news item as this can change hourly, just look for the text of the news item the code for the ad is right after it. This site has had this problem for several months, so it should be a good example. 20030728 Mozilla Firebird/0.6.1 win xp logitech mouse drivers 9.76.0.0
taking, I have a fix.
Assignee: jag → bryner
Attached patch patchSplinter Review
Bubble up the scroll to the parent if the scrollable view has a line height of 0. This is a regression from the fix for bug 199024.
Attachment #130326 - Flags: superreview?(darin)
Attachment #130326 - Flags: review?(roc+moz)
Attachment #130326 - Flags: superreview?(darin)
Attachment #130326 - Flags: superreview+
Attachment #130326 - Flags: review?(roc+moz)
Attachment #130326 - Flags: review+
Comment on attachment 130326 [details] [diff] [review] patch requesting approval for 1.5b... this is a pretty safe patch.
Attachment #130326 - Flags: approval1.5b?
Comment on attachment 130326 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to 1.5beta. Time is short, so get this in ASAP if you want it for beta.
Attachment #130326 - Flags: approval1.5b? → approval1.5b+
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
I can verify that this fixed scrolling within the iframe on http://www.squarefree.com/bookmarklets/pagelinks.html (broken in Firebird 08/24, works in Firebird 08/26, WinXP). Scrolling within the iframe on http://hardocp.com/ didn't work the first time I tried but did work after that.
By "the first time I tried," do you mean you reloaded the page and it worked, or simply moved the mouse out of the iframe and back in?
bryner: I restarted the browser. Testing again... Now I have one http://www.hardocp.com/ window where scrolling the iframe works and another http://www.hardocp.com/ window where it doesn't. (I'm only testing the non-flash "Reseller Ratings" ads, which appear about 40% of the time.) It seems to be random whether it works or not, but reloading usually doesn't change whether it works. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030826 Mozilla Firebird/0.6.1+
*** Bug 221210 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: