Fix mousewheel scrolling over certain IFRAMEs which have a line height of 0 on the scrollport view.  Bug 203239, r/sr=roc, a=asa.